[gd_scene load_steps=20 format=3 uid="uid://b4dpjminsf4mx"]

[ext_resource type="Script" path="res://assets/scripts/worldRelated/worldScript/worldScript.gd" id="1_vjirs"]
[ext_resource type="Environment" uid="uid://dnig6jq4e6pjs" path="res://assets/envs/default_environment.tres" id="2_e62ir"]
[ext_resource type="PackedScene" uid="uid://dodu8jdt3nw06" path="res://assets/scenes/ui/GamePauseMenu.tscn" id="3_2mura"]
[ext_resource type="Resource" uid="uid://cslvcweyejh3c" path="res://addons/SphynxMotionBlurToolkit/PreBlurProcessing/default_camera_movement_component.tres" id="3_rx056"]
[ext_resource type="Resource" uid="uid://iru8ynu04i00" path="res://addons/SphynxMotionBlurToolkit/PreBlurProcessing/default_camera_rotation_component.tres" id="4_fo4pg"]
[ext_resource type="Resource" uid="uid://rp3mpjmisoyh" path="res://addons/SphynxMotionBlurToolkit/PreBlurProcessing/default_object_movement_component.tres" id="5_hsea8"]
[ext_resource type="Resource" uid="uid://c8ulad7utgrg7" path="res://addons/SphynxMotionBlurToolkit/PreBlurProcessing/pre_blur_processing_stage.tres" id="6_0r4qh"]
[ext_resource type="Script" path="res://addons/SphynxMotionBlurToolkit/PreBlurProcessing/pre_blur_processor.gd" id="7_ru25u"]
[ext_resource type="Resource" uid="uid://bk5yd5plopwi2" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/simple_jf_blur_stage.tres" id="8_72evi"]
[ext_resource type="Resource" uid="uid://bj3exhmsfcx4w" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/jf_simple_stage.tres" id="9_jg308"]
[ext_resource type="Resource" uid="uid://co5k7plgmxepi" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/jump_flood_neighbor_max_stage.tres" id="10_w8bxp"]
[ext_resource type="Resource" uid="uid://dc5fr84ue3dn5" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/jump_flood_overlay_stage.tres" id="11_yda02"]
[ext_resource type="Script" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/simple_jf_motion_blur.gd" id="12_xkro7"]
[ext_resource type="Resource" uid="uid://c10aboaly701b" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/jump_flood_tile_max_x_stage.tres" id="13_xwso3"]
[ext_resource type="Resource" uid="uid://cymk87e4nyxva" path="res://addons/SphynxMotionBlurToolkit/JumpFlood/jump_flood_tile_max_y_stage.tres" id="14_u7agd"]

[sub_resource type="GDScript" id="GDScript_7bgfo"]
resource_name = "worldEnvironment"
script/source = "extends Node
@onready var worldEnv : WorldEnvironment = $worldEnvironment:
	set(value):
		worldEnv = value
		UserConfig.configs_updated.connect(updateGraphics)
func _ready():
	updateGraphics()
	UserConfig.configs_updated.connect(updateGraphics)

func updateGraphics():
	worldEnv.get_environment().ssil_enabled = UserConfig.graphics_Ssil
	worldEnv.get_environment().ssr_enabled = UserConfig.graphics_Ssr
	worldEnv.get_environment().sdfgi_enabled = UserConfig.graphics_Sdfgi
"

[sub_resource type="CompositorEffect" id="CompositorEffect_pmh78"]
resource_local_to_scene = false
resource_name = ""
enabled = true
effect_callback_type = 4
needs_motion_vectors = false
needs_normal_roughness = false
script = ExtResource("7_ru25u")
pre_blur_processor_stage = ExtResource("6_0r4qh")
camera_rotation_component = ExtResource("4_fo4pg")
camera_movement_component = ExtResource("3_rx056")
object_movement_component = ExtResource("5_hsea8")
debug = false

[sub_resource type="CompositorEffect" id="CompositorEffect_uxybo"]
resource_local_to_scene = false
resource_name = ""
enabled = true
effect_callback_type = 4
needs_motion_vectors = false
needs_normal_roughness = false
script = ExtResource("12_xkro7")
tile_max_x_stage = ExtResource("13_xwso3")
tile_max_y_stage = ExtResource("14_u7agd")
construct_stage = ExtResource("9_jg308")
neighbor_max_stage = ExtResource("10_w8bxp")
blur_stage = ExtResource("8_72evi")
overlay_stage = ExtResource("11_yda02")
perpen_error_threshold = 0.5
sample_step_multiplier = 16
step_exponent_modifier = 1.0
JFA_pass_count = 3
samples = 16
intensity = 1.0
center_fade = 0.0
framerate_independent = true
uncapped_independence = false
target_constant_framerate = 60.0
debug = false

[sub_resource type="Compositor" id="Compositor_y03ey"]
compositor_effects = Array[CompositorEffect]([SubResource("CompositorEffect_pmh78"), SubResource("CompositorEffect_uxybo")])

[node name="worldBase" type="Node"]
script = ExtResource("1_vjirs")

[node name="Spawns" type="Node" parent="."]

[node name="playerSpawns" type="Node" parent="Spawns"]

[node name="pawnSpawns" type="Node" parent="Spawns"]

[node name="Environment" type="Node" parent="."]
script = SubResource("GDScript_7bgfo")

[node name="worldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = ExtResource("2_e62ir")
compositor = SubResource("Compositor_y03ey")

[node name="reflectionProbe" type="ReflectionProbe" parent="Environment"]

[node name="directionalLight3d" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.912456, 0.409175, 0, -0.409175, 0.912456, 0, 0, 0)
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_fade_start = 1.0

[node name="Geometry" type="Node3D" parent="."]

[node name="Pawns" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="Pawns"]

[node name="Props" type="Node3D" parent="."]

[node name="Misc" type="Node3D" parent="."]

[node name="Particles" type="Node3D" parent="Misc"]

[node name="WaypointNodes" type="Node3D" parent="Misc"]

[node name="Triggers" type="Node3D" parent="Misc"]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Misc"]
_spawnable_scenes = PackedStringArray("res://assets/entities/camera/camera.tscn")
spawn_path = NodePath("../../Pawns/Players")

[node name="GamePauseMenu" parent="." instance=ExtResource("3_2mura")]

[node name="mapLogic" type="Node" parent="."]
